@@ -156,6 +156,7 @@ WONTFIX SKIP : storage/domstorage/localstorage/storagetracker = PASS TIMEOUT FAI
 WONTFIX SKIP : fast/workers = PASS TIMEOUT FAIL
 WONTFIX SKIP : fast/files/workers = PASS TIMEOUT FAIL
 WONTFIX SKIP : fast/filesystem/workers = PASS TIMEOUT FAIL
+WONTFIX SKIP : fast/webgl/canvas/worker-data-view-test.html = PASS TIMEOUT FAIL
 WONTFIX SKIP : http/tests/filesystem/workers = PASS TIMEOUT FAIL
 WONTFIX SKIP : http/tests/workers = PASS TIMEOUT FAIL
 WONTFIX SKIP : http/tests/xmlhttprequest/workers = PASS TIMEOUT FAIL
