@@ -1,3 +1,14 @@
+2011-04-20  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Kenneth Russell.
+
+        Support DataView in workers
+        https://bugs.webkit.org/show_bug.cgi?id=59014
+
+        Test: fast/canvas/webgl/worker-data-view-test.html
+
+        * workers/WorkerContext.idl: Expose DataView constructor.
+
 2011-04-20  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Adam Roben.
