@@ -1,3 +1,15 @@
+2011-04-20  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Kenneth Russell.
+
+        Support DataView in workers
+        https://bugs.webkit.org/show_bug.cgi?id=59014
+
+        * fast/canvas/webgl/resources/worker-data-view-test.js: Added.
+        * fast/canvas/webgl/worker-data-view-test-expected.txt: Added.
+        * fast/canvas/webgl/worker-data-view-test.html: Added.
+        * platform/chromium/test_expectations.txt:
+
 2011-04-20  Tony Chang  <tony@chromium.org>
 
         Cleanup .checksum files that don't have .png files.
